# Kernos

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  README.md  cli.sh  impl_notes.md  pyproject.toml  requirements.txt  spec.md  start.sh
.kernos_sandbox/: diag_err.txt  diag_input.txt  diag_out.txt  h2_input.txt  h2_out.txt  h3_out.txt  r3_err.txt  r3_out.txt  r4_err.txt  r4_out.txt  r5_err.txt  r5_input.txt  r5_out.txt  r6_err.txt  r6_input.txt  r6_out.txt  r7_err.txt  r7_input.txt  r7_out.txt  r8_err.txt  r8_input.txt  r8_out.txt  r9_err.txt  r9_input.txt  r9_out.txt  selftest_err.txt  selftest_input.txt  selftest_out.txt  st_input.txt  st_out.txt
docs/: CROSS-SPACE-REQUESTS.md  DESIGN-PRINCIPLES.md  EXTERNAL-AGENTS.md  TECHNICAL-ARCHITECTURE.md  TESTING-PATTERN.md  V1-SELF-TEST.md  index.md  install.md  kernos-introduction.md  privacy.html  terms.html  workflow-actions.md
kernos/: app.py  chat.py  discord_runtime.py  repl.py  server.py  sms_poller.py  soak.py  utils.py
scripts/: baked_catalog_live_test.py  check_reference_catalog_freshness.py  codex_body_diff.py  codex_replay_mutations.py  codex_tipping_point.py  debug_claude_acp_hang.py  dev-repl.sh  install_baked_catalog_hook.sh  kernos.service.template  lever1_multi_target_soak.py  manage-kernos-service.sh  phase_1_wipe_verification.py  reference_primitive_live_test.py  regenerate_reference_catalog.py  run-soak.sh  run_live_provider_soak.sh  run_substrate_soak.sh
specs/: ACTIONSTATERECORD-WORKFLOW-COMPOSITION-V1-CONTEXT.md  ACTIONSTATERECORD-WORKFLOW-COMPOSITION-V1.md  AGENT-CONSULT-CHANNEL-V1.md  (+53 more)
(+893 files in other folders)
