[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kernos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.49.0",
    "python-dotenv>=1.0.0",
    "twilio>=9.0.0",
    "discord.py>=2.3.0",
    "mcp>=1.26.0",
    "aiofiles>=24.1.0",
    "filelock>=3.0",
    "rapidfuzz>=3.0.0",
    "jellyfish>=1.0.0",
    "voyageai>=0.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aider-chat>=0.86,<0.87",
    "playwright>=1.45",
    "markdownify>=0.11",
    # Load-bearing runtime imports that were undeclared until now
    # (caught during a fresh-deployment audit of a pull-only clone).
    # Without these a clean `pip install -e .` produces an importable
    # but non-runnable Kernos:
    "aiosqlite>=0.20",      # state layer + WLP execution_engine — 14 files
    "croniter>=2.0",        # cron predicate evaluator + scheduler.py
    "cryptography>=42",     # Fernet key wrapping in credentials_member.py
    "beautifulsoup4>=4.12", # browser/extractors.py HTML parsing
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kernos*"]
